config/samples/page_v1alpha1_serviceentry.yaml
apiVersion: page.kubepage.dev/v1alpha1
kind: ServiceEntry
metadata:
  labels:
    app.kubernetes.io/name: kubepage-operator
    app.kubernetes.io/managed-by: kustomize
  name: serviceentry-sample
spec:
  instanceRef:
    name: instance-sample
  group: Media
  name: Sonarr
  href: http://sonarr.example.com
  icon: sonarr.png
  description: Series management
  widgets:
    - type: sonarr
      url: http://sonarr.example.com
      secrets:
        key:
          secretKeyRef:
            name: sonarr-credentials
            key: apikey
